fixed the overflow of the background icon in the boutiques section of the homepage

--- a/app/assets/stylesheets/components/_bckgrnd-logos.scss
+++ b/app/assets/stylesheets/components/_bckgrnd-logos.scss
@@ -2,6 +2,7 @@
   position: absolute;
   z-index: -1;
   width: 125px;
+  overflow: hidden;
   &.bag{
     top: 2255px;
     left: 15px;
