--- a/app/assets/stylesheets/components/_botiques.scss
+++ b/app/assets/stylesheets/components/_botiques.scss
@@ -1,4 +1,5 @@
 .virtualBotiques{
+  overflow: hidden;
   .container{
     margin-left: 50px;
   }
