--- a/app/assets/stylesheets/config/_general.scss
+++ b/app/assets/stylesheets/config/_general.scss
@@ -8,3 +8,8 @@ a{
     text-decoration: none;
   }
 }
+
+body{
+  overflow-x: hidden;
+  position: relative;
+}
